FIX :: PrimaryModule이 없지만 빈 리스트를 반환하지 않는 오류